# Rollender-Stein

./: .env.example  .gitignore  ARCHITECTURE.md  AUDIT_DECISIONS.md  CHANGELOG.md  CLAUDE.md  INVARIANTS.md  KNOWN_LIMITATIONS.md  README.md  URTRIF.md  pyproject.toml
.github/workflows/: ci.yml
config/: refresh.yaml.example
src/rollender_stein/: __main__.py  assets.py  audit.py  bitemporal.py  calendar.py  cli.py  config.py  dashboard.py  locf.py  marketcap.py  patterns.py  persist.py  run.py  runconfig.py  valuation.py  volume.py
src/rollender_stein/io/: eia.py  fred.py  sec_edgar.py  yahoo.py
src/rollender_stein/numeraires/: __init__.py  energy.py  gold.py  liquidity.py  time.py
tests/: test_assets.py  test_audit.py  test_bitemporal.py  test_dashboard.py  test_eia_io.py  test_fred_io.py  test_locf.py  test_marketcap.py  test_numeraire_energy.py  test_numeraire_gold.py  test_numeraire_liquidity.py  test_numeraire_time.py  test_patterns.py  test_persist.py  test_run.py  test_runconfig.py  test_smoke.py  test_valuation.py  test_volume.py  test_yahoo_io.py
