[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rollender-stein"
version = "0.0.1"
description = "Stealth-mode market analysis, trading signal generation, and strategy backtesting."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "RvL13 Capital" }]
license = { text = "Proprietary" }
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "polars>=1.10",
    "scipy>=1.13",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "matplotlib>=3.9",
]

[project.optional-dependencies]
research = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "seaborn>=0.13",
]
backtest = [
    "vectorbt>=0.26",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rollender_stein"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
