[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rollender-stein"
version = "0.0.1"
description = "Stealth-mode market analysis, trading signal generation, and strategy backtesting."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "RvL13 Capital" }]
license = { text = "Proprietary" }
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "polars>=1.10",
    "scipy>=1.13",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "matplotlib>=3.9",
    "statsmodels>=0.14",
    "fredapi>=0.5",
    "plotly>=5.20",
    "requests>=2.32",
    "pandas-market-calendars>=4.4",
    "duckdb>=1.1",
    "python-dotenv>=1.0",
    "yfinance>=0.2.40",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
research = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "seaborn>=0.13",
]
backtest = [
    "vectorbt>=0.26",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pandas-stubs>=2.2",
    "types-requests>=2.32",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rollender_stein"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

# Third-party libraries without stubs — silence rather than litter the codebase
# with `# type: ignore[import-untyped]`. Plotly's stubs are third-party + partial;
# statsmodels has no stubs at all; yfinance + pandas_market_calendars + duckdb +
# fredapi + dotenv likewise. We type our own boundaries (Protocol for sessions,
# Series/DataFrame for return values) and accept that calls into these modules
# return Any.
[[tool.mypy.overrides]]
module = [
    "plotly.*",
    "statsmodels.*",
    "yfinance.*",
    "pandas_market_calendars.*",
    "duckdb.*",
    "fredapi.*",
    "dotenv.*",
]
ignore_missing_imports = true
